--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -22,4 +22,6 @@ dependencies {
     testImplementation "org.mockito:mockito-inline:3.3.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
